fixed horizontal scrollbar that was caused in page15

--- a/election_errors/en/application.less
+++ b/election_errors/en/application.less
@@ -2810,6 +2810,7 @@ body {
   right: 0px;
   min-height: 100%;
   padding-top: 95px;
+  overflow: hidden;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
